--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>lesson_2</module>
+        <module>structural_patterns</module>
     </modules>
 
     <name>gb_patterns</name>
