feat: create HW5: use Chain of Responsibility

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>lesson_2</module>
         <module>structural_patterns</module>
+        <module>behavioral_patterns</module>
     </modules>
 
     <name>gb_patterns</name>
